# docnamer

./: LICENSE  README.rst  default.nix  pyproject.toml
src/docnamer/: __init__.py  __main__.py  rename_documents.py
