[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "docnamer"
authors = [{name = "Antti Kaihola", email = "13725+akaihola@users.noreply.github.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/akaihola/docnamer"
